--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
 asgiref==3.4.1
 Django==3.2.9
+django-ckeditor==6.5.0
+django-js-asset==2.0.0
+Pillow==9.1.1
 pytz==2021.3
 sqlparse==0.4.2
-typing_extensions==4.0.0
+typing-extensions==4.0.0
