--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@ parts/
 sdist/
 var/
 wheels/
+media/
 pip-wheel-metadata/
 share/python-wheels/
 *.egg-info/
@@ -41,7 +42,7 @@ pip-delete-this-directory.txt
 htmlcov/
 .tox/
 .nox/
-.coverage
+/bin/bash: line 1: q: command not found
 .coverage.*
 .cache
 nosetests.xml
